flux/flux/base/network-policies/network-policies.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-source-controller-to-repos
spec:
  description: allow source controller to access repos
  endpointSelector:
    matchLabels:
      app: source-controller
  egress:
    - toFQDNs:
        - matchName: democratic-csi.github.io
        - matchName: kubernetes-sigs.github.io
        - matchName: release-assets.githubusercontent.com
        - matchName: ghcr.io
        - matchName: pkg-containers.githubusercontent.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
